--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -3,7 +3,7 @@
 #root {
   background-color: $background-color;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
