--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -86,6 +86,7 @@ video {
   border: 0;
   font-size: 100%;
   vertical-align: baseline;
+  overscroll-behavior-y: none;
 }
 article,
 aside,
